--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,15 @@
     width:50%;
   
    }
+   .nome2{
+    color: #1A4A65;
+    margin-left: 260px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 40px;
+    font-weight: bold;
+    width: 500px;
+    font-size: 30px;
+   }
    .nome{
     color: #1A4A65;
     margin-left: 360px;
@@ -12,20 +21,19 @@
     font-size: 30px;
    
    }
-   .autora{
-    color: #3A7A8E;
-    margin-left: 60px;
-    margin-top:40px;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   }
+   
    .img2{
     width: 300px;
     height: 450px;
-    margin-left: 30px;
-    margin-top: 100px;
+    margin-left: 50px;
    }
    .estrelas{
     margin-left: 110px;
+    height: 50px;
+    width: 130px;
+   }
+   .estrelas2{
+    margin-left: 160px;
     height: 50px;
     width: 130px;
    }
@@ -70,7 +78,7 @@
 }
 .baixo-livros{
     background-color: #B1CCD4;
-    width: 1550px;
+    width: 1510px;
     height: 700px;
   
 }
@@ -98,12 +106,7 @@ width: 300px;
 margin-top: 150px;
 
  }
- .avaliacoes{
-    color: #8D7608;
-    margin-left: 118px;
-    margin-top:-20px;
-    margin-bottom: 40px;
- }
+
  .livro2-img{
     margin-left: 2000px;
     margin-top: 100px;
@@ -142,12 +145,25 @@ margin-top: 150px;
     margin-left: 160px;
     height: 40px;
 }
+.avaliacoes{
+    color: #8D7608;
+    margin-left: 140px;
+    margin-top:-20px;
+    margin-bottom: 40px;
+ }
 .avaliacoes2{
     color: #8D7608;
-    margin-left: 150px;
+    margin-left: 200px;
     margin-top:-20px;
     margin-bottom: 40px;
 }
+.autora{
+    color: #3A7A8E;
+    margin-left: 80px;
+    margin-top:-40px;
+    margin-bottom: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   }
 .autora2{
     color: #3A7A8E;
     margin-left: 80px;
@@ -189,11 +205,5 @@ margin-top: 90px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
 }
-.botao{
-    margin-top: 80px;
-    height: 50px;
-    width: 50px;
-    border-radius: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
 
