--- a/css/nav.css
+++ b/css/nav.css
@@ -85,8 +85,7 @@ height: 30px;
     flex: 1; /* Distribui espaço igualmente entre os links */
     height: 50px;
     margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 50px;
+    width:25%;
     color: rgb(251, 253, 253);
     text-decoration: none;
     
