--- a/css/box.css
+++ b/css/box.css
@@ -20,7 +20,7 @@
     width: 50%;
     margin-left: 400px;
     padding: 30px;
-    height: 650px;
+    height: auto;
     display: inline-block;
     border-radius: 20px;
 }
@@ -43,7 +43,7 @@
     width: 50%;
     margin-left: 400px;
     padding: 30px;
-    height: 650px;
+    height: auto;
     display: inline-block;
     border-radius: 20px;
 }
@@ -66,7 +66,11 @@
     width: 50%;
     margin-left: 400px;
     padding: 30px;
-    height: 650px;
+    height: auto;
     display: inline-block;
     border-radius: 20px;
 }
+.btn text-white:hover {
+            color: gray;
+            background-color: #3379a1;
+        }
