--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
    }
    .nome2{
     color: #1A4A65;
-    margin-left: 260px;
+    margin-left: 140px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 40px;
     font-weight: bold;
@@ -13,7 +13,7 @@
    }
    .nome{
     color: #1A4A65;
-    margin-left: 360px;
+    margin-left: 180px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 40px;
     font-weight: bold;
@@ -25,7 +25,7 @@
    .img2{
     width: 300px;
     height: 450px;
-    margin-left: 50px;
+    margin-left: 30px;
    }
    .estrelas{
     margin-left: 110px;
@@ -63,9 +63,10 @@
     
    }
 .linha{
- padding-top:100px;
+ padding-top:50px;
    display:flex;
     flex-flow:row;
+    padding-bottom: 50px;
 }
 .p1{
     color:#1A4A65;
@@ -78,10 +79,10 @@
 }
 .baixo-livros{
     background-color: #B1CCD4;
-    width: 1510px;
-    height: 700px;
-  
+    width: 100%; /* Use 100% para ocupar toda a largura da tela */
+    overflow-x: auto; 
 }
+
 .livro1{
     height: 500px;
     width: 300px;
@@ -101,7 +102,7 @@
 }
  .introducao{
 font-size: 20px;
-margin-left: 60px;
+margin-left: 10px;
 width: 300px;
 margin-top: 150px;
 
@@ -136,7 +137,7 @@ margin-top: 150px;
     width: 300px;
     height: 300px;
     font-size: 20px;
-    margin-left: 60px;
+    margin-left: 80px;
     margin-top:-20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
